--- a/main.html
+++ b/main.html
@@ -14,11 +14,15 @@
 <caption>Student Details</caption>
 	
 	<table border="2px" bgcolor="yellow">
+		<thead>
 	<tr>
 		<th>NAME</th>
 		<th>AGE</th>
 		<th>BRANCH</th>
 	</tr>
+		</thead>
+
+		    <tbody>
 		<tr>
 			<td>Shaw</td>
 			<td>20</td>
@@ -29,6 +33,7 @@
 			<td>21</td>
 			<td>ECE</td>
 		</tr>
+			</tbody>
 	</table>
 </body>
 
