--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	
-	<table border="1px" bgcolor="yellow">
+	<table border="1px solid black" bgcolor="yellow">
 		<caption>Student Details</caption>
 		<thead>
 	<tr>
